--- a/src/main/java/com/cmy/xcheck/config/check_messages_EN.properties
+++ b/src/main/java/com/cmy/xcheck/config/check_messages_EN.properties
@@ -1,1 +1,22 @@
-w
+> = must large then
+< = must less then
+>\= = must large or equals then
+<\= = must less or equals then
+\=\= = must equals to
+\!\= = can not equals to
+
+d= must be digit
+D= can not contain digit
+w= must be letter
+W= can not contain letter
+e= Mailbox format is incorrect
+p= Phone format is incorrect
+l= 字符长度必须是{0}位
+ml= length of this string must not exceed {0} characters
+$= money format is invalid
+in= must in ({0})
+reg= input error
+
+CanNotBeNull= can not be bull
+ParameterError= one or more parameter are invalid
+fieldAliasError= field alias 字段别名设置不正确
