1国际化支持 2环境配置修改

--- a/src/main/java/com/cmy/xcheck/config/check_messages_EN.properties
+++ b/src/main/java/com/cmy/xcheck/config/check_messages_EN.properties
@@ -11,7 +11,7 @@ w= must be letter
 W= can not contain letter
 e= Mailbox format is incorrect
 p= Phone format is incorrect
-l= 字符长度必须是{0}位
+l= must be {0} characters
 ml= length of this string must not exceed {0} characters
 $= money format is invalid
 in= must in ({0})
@@ -19,4 +19,4 @@ reg= input error
 
 CanNotBeNull= can not be bull
 ParameterError= one or more parameter are invalid
-fieldAliasError= field alias 字段别名设置不正确
+fieldAliasError= field alias set is incorrect
